hphp/test/slow/collection_classes/invalid-operations.php.expectf
object(HH\ImmVector)#2 (2) {
  [0]=>
  object(HH\Vector)#3 (1) {
    [0]=>
    int(1)
  }
  [1]=>
  object(HH\Vector)#4 (1) {
    [0]=>
    int(2)
  }
}
object(HH\ImmMap)#5 (2) {
  [0]=>
  object(HH\Vector)#6 (1) {
    [0]=>
    int(1)
  }
  [1]=>
  object(HH\Vector)#7 (1) {
    [0]=>
    int(2)
  }
}
object(HH\Pair)#8 (2) {
  [0]=>
  object(HH\Vector)#9 (1) {
    [0]=>
    int(1)
  }
  [1]=>
  object(HH\Vector)#10 (1) {
    [0]=>
    int(2)
  }
}

object(HH\ImmVector)#12 (2) {
  [0]=>
  array(1) {
    [0]=>
    object(HH\Vector)#13 (1) {
      [0]=>
      int(1)
    }
  }
  [1]=>
  array(1) {
    [0]=>
    object(HH\Vector)#14 (1) {
      [0]=>
      int(2)
    }
  }
}
object(HH\ImmMap)#15 (2) {
  [0]=>
  array(1) {
    [0]=>
    object(HH\Vector)#16 (1) {
      [0]=>
      int(1)
    }
  }
  [1]=>
  array(1) {
    [0]=>
    object(HH\Vector)#17 (1) {
      [0]=>
      int(2)
    }
  }
}
object(HH\Pair)#18 (2) {
  [0]=>
  array(1) {
    [0]=>
    object(HH\Vector)#19 (1) {
      [0]=>
      int(1)
    }
  }
  [1]=>
  array(1) {
    [0]=>
    object(HH\Vector)#20 (1) {
      [0]=>
      int(2)
    }
  }
}

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot modify immutable object of type HH\ImmVector
Caught exception: Cannot modify immutable object of type HH\ImmMap
Caught exception: Cannot modify immutable object of type HH\Pair

Caught exception: Cannot use [] with collections for reading in an lvalue context
Caught exception: Cannot use [] with collections for reading in an lvalue context
Caught exception: Cannot use [] with collections for reading in an lvalue context


Fatal error: Collection elements cannot be taken by reference in %s on line 174
